@@ -12,14 +12,15 @@ import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.io.*;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -30,7 +31,6 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class MelonCrawlService {
     private final SongRepository songRepository;
-
     private final Pattern pattern = Pattern.compile("(\\d+)(?=\\);)");
     private final Map<String,Long> dictionary = new HashMap<String,Long>(){
         {
@@ -74,10 +74,11 @@ public class MelonCrawlService {
             put("워십",37L);
         }
     };
-
-    @Scheduled(fixedRate = 21600000)
+    @Transactional
+    @Scheduled(fixedRate = 86400000) //top100인것 초기화 후 표시하기
     public void collectMelonSong() throws Exception {
         List<SongDto> pList = new LinkedList<>();
+        TopReset();
         String url = "https://www.melon.com/chart/index.htm";
 
         Document doc = Jsoup.connect(url).get();
@@ -85,88 +86,89 @@ public class MelonCrawlService {
         Elements element = doc.select("div.service_list_song");
         for (Element songInfo : element.select("#lst50")) {
             SongDto songDto = top100CrawlParser(songInfo);
-            pList.add(songDto);
+            if(songDto!=null){  //존재하면
+                pList.add(songDto);
+            }
         }
-
-        Thread.sleep(3000);
-
         for (Element songInfo : element.select("#lst100")) {
             // 크롤링을 통해 데이터 저장하기
             SongDto songDto = top100CrawlParser(songInfo);
-            pList.add(songDto);
+            if(songDto!=null){
+                pList.add(songDto);
+            }
         }
 
         String genreUrl = "https://www.melon.com/song/detail.htm?songId=";
         for(SongDto song: pList){
-            String getGenreParam = String.valueOf(song.getId());
-            Document genreDoc = Jsoup.connect(genreUrl+getGenreParam).get();
-            SongDto songdto = genreImgUrlParser(genreDoc,song);
-            songRepository.save(songdto.toChartEntity());
+            if(song.getGenre()==null){
+                String getGenreParam = String.valueOf(song.getId());
+                Document genreDoc = Jsoup.connect(genreUrl+getGenreParam).get();
+                Thread.sleep(500);
+                genreImgUrlParser(genreDoc,song);
+            }else{
+                songRepository.save(song.toSongEntity());
+            }
         }
     }
-    public void artistCrawl() throws Exception{
-        Set<String> artistList = new HashSet<>();
-        List<String> mode = new ArrayList<String>(Arrays.asList("100","200","300","400","500","600","700","800"));
-        for(String i :mode){
-            String url = "https://www.melon.com/chart/month/index.htm?classCd=GN0"+i;
-            Connection connect = Jsoup.connect(url);
-            Document doc=null;
-            try{
-                Thread.sleep(10000);
-                doc = connect.get();
-            }catch (InterruptedException ex){
-                ex.printStackTrace((PrintStream) log);
-            }
-
-            assert doc != null;
-            Elements elements = doc.select("div.service_list_song");
-            System.out.println("elements = " + elements);
-            for(Element element : elements.select("#lst50")){
-                String artist = element.select("div.ellipsis.rank02 a").eq(0).text(); //가수
-                log.info(artist);
-                if(!artist.contains(",")) {
-                    artistList.add(artist);
-                }
-            }
-            for(Element element : elements.select("#lst100")){
-                String artist = element.select("div.ellipsis.rank02 a").eq(0).text(); //가수
-                log.info(artist);
-                if(!artist.contains(",")) {
-                    artistList.add(artist);
-                }
-            }
-            log.info(artistList.toString());
+    @Transactional
+    public void TopReset(){
+        List<Song> old = songRepository.findByIsTop(true);
+        for(Song i : old){
+            SongDto newSong = i.toSongDto();
+            newSong.setTop(false);
+            songRepository.save(newSong.toSongEntity());
         }
-        writeListToFile(artistList,"C:\\Users\\kwy\\Documents\\2023하계\\cleancode\\src\\main\\resources\\static\\artist.txt");
     }
-    public List<SongDto> search_artist(String artist, String mode) throws Exception{
-        Long res =0L;
+    @Transactional
+    public List<SongDto> search_artist(String artist, String mode){
         List<SongDto> list = new LinkedList<>();
-        Pattern pattern = Pattern.compile("\\b(\\d+)\\b");
-//        String all = "https://www.melon.com/search/song/index.htm?q="+artist+"&section=all&searchGnbYn=Y&kkoSpl=N&kkoDpType=#params%5Bq%5D="+artist+"&params%5Bsort%5D=hit&params%5Bsection%5D=all&params%5BsectionId%5D=&params%5BgenreDir%5D=&po=pageObj&startIndex=51";
+        Pattern localpattern = Pattern.compile("'(\\d+)'");
         String m ="";
         switch(mode){
             case "0":
                 m="all";
+                List<Song> result3 = songRepository.findByArtistContainingOrTitleContaining(artist,artist);
+                if(result3.size()>=10){
+                    log.info("any exists");
+                    return result3.stream()
+                            .map(Song::toSongDto)
+                            .collect(Collectors.toList());
+                }
                 break;
             case "1":
                 m="artist";
                 List<Song> result = songRepository.findByArtistContaining(artist);
-                if(!result.isEmpty()){
+//                log.info(result.toString());
+                if(result.size()>=10){
+                    log.info("artist exists");
                     return result.stream()
-                            .map(Song::toChartDto)
+                            .map(Song::toSongDto)
                             .collect(Collectors.toList());
                 }
                 break;
             case "2":
                 m="song";
+                List<Song> result2 = songRepository.findByTitleContaining(artist);
+                if(result2.size()>=10){
+                    log.info("title exists");
+                    return result2.stream()
+                            .map(Song::toSongDto)
+                            .collect(Collectors.toList());
+                }
                 break;
             case "3":
                 m="album";
                 break;
         }
-//        String EncodingArtist = URLEncoder.encode(artist, "UTF-8");
-        String url = "https://www.melon.com/search/song/index.htm?q="+artist+"&section="+m+"&searchGnbYn=Y&kkoSpl=N&kkoDpType=%22%22#params%5Bq%5D="+artist+"&params%5Bsort%5D=hit&params%5Bsection%5D=artist&params%5BsectionId%5D=&params%5BgenreDir%5D=&po=pageObj&startIndex=";
+        String EncodingArtist="";
+        try {
+            EncodingArtist = URLEncoder.encode(artist, StandardCharsets.UTF_8);
+        }catch (Exception ex){
+            log.error("An error occured : ", ex);
+        }
+        String url = "https://www.melon.com/search/song/index.htm?q="
+                +EncodingArtist+"&section="+m+"&searchGnbYn=Y&kkoSpl=N&kkoDpType=%22%22#params%5Bq%5D="+EncodingArtist+
+                "&params%5Bsort%5D=hit&params%5Bsection%5D=artist&params%5BsectionId%5D=&params%5BgenreDir%5D=&po=pageObj&startIndex=";
         log.info(url);
         Connection connection = Jsoup.connect(url);
         try{
@@ -177,47 +179,41 @@ public class MelonCrawlService {
                 try {
                     Elements tds = row.select("td");
                     Element td2 = tds.get(2);
-                    String title = td2.select("div>div>a.fc_gray").first().text();
+                    String title = td2.select("div>div>a.fc_gray").first().text(); //title
                     title = title.replace(","," ");
-                    System.out.println("title = " + title);
-                    //            #frm_defaultList > div > table > tbody > tr:nth-child(17) > td:nth-child(3) > div > div > a.fc_gray
                     Element td3 = tds.get(3);
-                    String singer = td3.select("div>div>a").first().text();
+                    String singer = td3.select("div>div>a").first().text(); //artist
                     if(!singer.contains(",")){
                         Element td4 = tds.get(4);
-                        Element td5 = tds.get(5);
-
-                        String likeId = td2.select("div>div>a.fc_gray").attr("href");
-                        Matcher matcher = pattern.matcher(likeId);
-                        String like = null;
-                        if(matcher.find()){
-                            like = matcher.group();
-                            log.info(like);
-                        }else {
-                            like = "0";
-                        }
                         String href = td4.select("div>div>a").attr("href");
                         String[] parse = parser(href);
-                        SongDto songDto = SongDto.builder()
-                                .title(title)
-                                .artist(singer)
-                                .id(Long.valueOf(parse[4]))
-                                .likeId(Long.valueOf(like))
-                                .build();
-                        if(songRepository.findById(Long.valueOf(parse[4])).isEmpty()){
+                        Long songId = Long.parseLong(parse[4]);
+
+//                        log.info("SongId : {}, likeId : {}",songDto.getId(),songDto.getLikeId());
+                        Optional<Song> song = songRepository.findById(Long.valueOf(parse[4]));
+
+                        if(song.isEmpty()){ //Song정보가 없으면
+                            log.info("search 없음");
+                            SongDto songDto = SongDto.builder()
+                                    .title(title)
+                                    .artist(singer)
+                                    .id(songId)
+                                    .build();
                             String genreUrl = "https://www.melon.com/song/detail.htm?songId=";
                             Document genreDoc = Jsoup.connect(genreUrl+parse[4]).get();
-                            songDto = genreImgUrlParser(genreDoc,songDto);
-                            songRepository.save(songDto.toChartEntity());
+                            genreImgUrlParser(genreDoc,songDto);
+                            SongDto songDto1 = songRepository.findById(songDto.getId()).get().toSongDto();
+                            list.add(songDto1);
+                        }else{
+                            list.add(song.get().toSongDto());
                         }
-                        list.add(songDto);
                     }
                 }catch (Exception ex){
-                    ex.printStackTrace((PrintStream) log);
+                    log.error("An error occured : ", ex);
                 }
             }
-        }catch (Exception e){
-            e.printStackTrace((PrintStream) log);
+        }catch (Exception ex){
+            log.error("An error occured : ", ex);
         }
         return list;
     }
@@ -259,9 +255,12 @@ public class MelonCrawlService {
         }
         return values;
     }
-    private SongDto genreImgUrlParser(Document genreDoc,SongDto songDto){
+    @Transactional
+    public void genreImgUrlParser(Document genreDoc,SongDto songDto){
         String genre = genreDoc.select("div.meta dd").eq(2).text();
         String imgUrl = genreDoc.select("#d_song_org > a > img").attr("src");
+        log.info("genre : {}",genre);
+        log.info("imgUrl : {}",imgUrl);
         List<String> genreArray;
         List<Long> encodedGenre = new ArrayList<>();
         if(genre.contains(",")){
@@ -278,30 +277,26 @@ public class MelonCrawlService {
         songDto.setImgUrl(imgUrl);
         songDto.setEncoded_genre(encodedGenre);
         songDto.setGenre(genreArray);
-        return songDto;
+        songRepository.save(songDto.toSongEntity());
     }
     private SongDto top100CrawlParser(Element songInfo){
         String songId = songInfo.attr("data-song-no");
-        String like = null;
-        if(songRepository.findById(Long.valueOf(songId)).isPresent()){
-            return null;
+
+        Optional<Song> tmp = songRepository.findById(Long.valueOf(songId));
+        if(tmp.isPresent()){
+            //log.info("top100 crawling:{}", tmp.get());
+            SongDto tmp2 = tmp.get().toSongDto();
+            tmp2.setTop(true);
+            return tmp2;
         }
         String title = songInfo.select("div.ellipsis.rank01 a").text(); //제목
         String artist = songInfo.select("div.ellipsis.rank02 a").eq(0).text(); //가수
-        String likeId = songInfo.select("div.ellipsis.rank01 a").attr("href");//좋아요 수 ID
-        Matcher matcher = pattern.matcher(likeId);
-        if(matcher.find()){
-            like = matcher.group();
-        }else {
-            like = "0";
-        }
-        SongDto songDto = SongDto.builder()
-                .likeId(Long.valueOf(like))
+        return SongDto.builder()
                 .artist(artist)
                 .title(title)
                 .id(Long.valueOf(songId))
+                .isTop(true)
                 .build();
-        return songDto;
     }
     public void writeListToFile(Set<String> dataList,String filePath){
         try (BufferedWriter writer = new BufferedWriter(new FileWriter(filePath,true))) {
@@ -309,8 +304,44 @@ public class MelonCrawlService {
                 writer.write(data);
                 writer.newLine(); // 각 데이터를 새로운 줄에 작성
             }
-        } catch (IOException e) {
-            e.printStackTrace((PrintStream) log);
+        } catch (IOException ex) {
+            log.error("An error occured : ", ex);
         }
+    }
+    @Deprecated
+    public void artistCrawl() throws Exception{
+        Set<String> artistList = new HashSet<>();
+        List<String> mode = new ArrayList<String>(Arrays.asList("100","200","300","400","500","600","700","800"));
+        for(String i :mode){
+            String url = "https://www.melon.com/chart/month/index.htm?classCd=GN0"+i;
+            Connection connect = Jsoup.connect(url);
+            Document doc=null;
+            try{
+                Thread.sleep(10000);
+                doc = connect.get();
+            }catch (InterruptedException ex){
+                log.error("An error occured : ", ex);
+            }
+
+            assert doc != null;
+            Elements elements = doc.select("div.service_list_song");
+            System.out.println("elements = " + elements);
+            for(Element element : elements.select("#lst50")){
+                String artist = element.select("div.ellipsis.rank02 a").eq(0).text(); //가수
+                log.info(artist);
+                if(!artist.contains(",")) {
+                    artistList.add(artist);
+                }
+            }
+            for(Element element : elements.select("#lst100")){
+                String artist = element.select("div.ellipsis.rank02 a").eq(0).text(); //가수
+                log.info(artist);
+                if(!artist.contains(",")) {
+                    artistList.add(artist);
+                }
+            }
+            log.info(artistList.toString());
+        }
+        writeListToFile(artistList,"C:\\Users\\kwy\\Documents\\2023하계\\cleancode\\src\\main\\resources\\static\\artist.txt");
     }
 }
